--- a/pom.xml
+++ b/pom.xml
@@ -20,12 +20,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-			<version>3.2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
 			<artifactId>tomcat-embed-jasper</artifactId>
-			<scope>default</scope>
+			<version>11.0.0-M4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
